# job_count_by_occupation

./: README.md  pyproject.toml
archive/outputs/: job_counts_2026-02.csv  job_counts_2026-02.json  jobmedley_market_scenarios_since_2022-04.csv  major_category_monthly_since_2022-04.csv  occupation_national_estimate_2026-02.csv  prefecture_total_monthly_since_2022-04.csv
docs/: confluence_estat_analysis_note.md
outputs/: job_counts_2010-01_to_2026-02.csv  job_counts_2026-02.csv  job_counts_2026-02.json  job_counts_top20_since_2022-04.html  job_type_mapping_master.csv  major_category_coverage_template_since_2022-04.csv  major_category_hellowork_vs_base_since_2022-04.csv  major_category_hellowork_vs_base_since_2022-04.html  national_market_scenarios_since_2022-04.csv  occupation_coverage_master_since_2022-04.csv  occupation_master_since_2022-04.csv  occupation_national_estimate_since_2022-04.csv  offer_rate_explorer.html  sample_offer_rate_input.csv
src/job_count_by_occupation/: __init__.py  __main__.py  chart_report.py  cli.py  coverage.py  estat.py  offer_rate_chart.py  prefecture.py
tests/: test_coverage.py  test_estat.py  test_offer_rate_chart.py  test_prefecture.py
